ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unco
  namespace: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: unco
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: unco
spec:
  rules:
  - host: aslamgcp.my.id
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service: 
            name: unco
            port:
              number: 80
